--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background-color: #614a2c;
             background-repeat: no-repeat;
             height: 155px;
-            font-size: 300%;
+            font-size: 270%;
             font-style: italic;
             font-family: Arial;
             text-align: center;
@@ -124,39 +124,69 @@
             display: grid;
             grid-template-columns: auto;
 		    grid-template-rows: auto; }
+            .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: red;
+            min-width: 160px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration:none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: blue;
+        }
 
 header { grid-row: 1 / 2; grid-column: 1 / 2; }
 nav    { grid-row: 2 / 3; grid-column: 1 / 2; }
 main   { grid-row: 3 / 4; grid-column: 1 / 2; }
 footer { grid-row: 4 / 5; grid-column: 1 / 2; }
-    </style>
-        <script>
-            function updateDateTime() {
-                var dateTimeElement = document.getElementById('dateTime');
-                if (dateTimeElement) {
-                    var now = new Date();
-                    var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric', hour12: true };
-                    var formattedDateTime = now.toLocaleString('en-US', options);
-                    dateTimeElement.textContent = ' | ' + formattedDateTime;
-                }
-            }
-    
-            window.onload = function () {
-                updateDateTime();
-                setInterval(updateDateTime, 1000);
-            };
-        </script>
+#menu ul li.active a {
+    background-color: #555;
+}
+#clock,
+#calendar {
+            color: white;
+            font-size: 30px;
+            margin-right: 10px;
+        }
+    </style>    
 </head>
-
 <body>
     <header>
-        <h1>Mahendra Higher Secondary School<br> Morang, Nepal</h1>
+        <h1 id="school-title">Mahendra Higher Secondary School<br> Morang, Nepal</h1>
+        <div id="clock"></div>
+        <div id="calendar"></div>
+        <h3><b>Contact: 9804074168</b></h3>
     </header>
     <div id="menu">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="homepage.html">Home</a></li>            
             <li><a href="about.html">About Us</a></li>
-            <li><a href="academics.html">Academics</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Academics</a>
+                <div class="dropdown-content">
+                    <a href="academics.html">Overview</a>
+                    <a href="departments.html">Departments</a>
+                    <a href="courses.html">Courses</a>
+                </div>
+            </li>
             <li><a href="admissions.html">Admissions</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -168,13 +198,27 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
         <h2>Providing the best education with excellent faculty members.</h2>
         <a href="another-page.html" class="cta-button">Learn More</a>
     </div>
+    <script>
+        function updateClock() {
+            var now = new Date();
+            var hours = now.getHours();
+            var minutes = now.getMinutes();
+            var seconds = now.getSeconds();
+                var timeString = hours.toString().padStart(2, '0') + ':' +
+                             minutes.toString().padStart(2, '0') + ':' +
+                             seconds.toString().padStart(2, '0');
+                document.getElementById('clock').innerText = timeString;
+           }
+           function updateCalendar() {
+            var now = new Date();
+            var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            var dateString = now.toLocaleDateString('en-US', options);
+            document.getElementById('calendar').innerText = dateString;
+        }
+              setInterval(updateClock, 1000);
+              setInterval(updateCalendar, 60000);
+                updateClock();
+                updateCalendar();
+        </script>
 </body>
-<footer>
-    <div>
-        <ul>
-            <li><a href="#quick-links">Quick Links</a></li>
-            <li><a href="#social-media">Social Media</a></li>
-        </ul>
-    </div>
-</footer>
 </html>
