--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
             <li class="dropdown">
                 <a href="#" class="dropbtn">Academics</a>
                 <div class="dropdown-content">
-                    <a href="overview.html">Overview</a>
+                    <a href="academics.html">Overview</a>
                     <a href="departments.html">Departments</a>
                     <a href="courses.html">Courses</a>
                 </div>
