--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
     </header>
     <div id="menu">
         <ul>
-            <li><a href="homepage.html">Home</a></li>            
+            <li><a href="index.html">Home</a></li>            
             <li><a href="about.html">About Us</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Academics</a>
