--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
     <div id="menu">
         <ul>
             <li><a href="index.html">Home</a></li>            
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about us.html">About Us</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Academics</a>
                 <div class="dropdown-content">
