--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,92 @@
         padding: 0;
         background-color: #f4f4f4;
     }
-    
+    #menu ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #333;
+            float: left;
+            display: block;
+        }
+
+        #menu ul li {
+            float: left;
+        }
+
+        #menu ul li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        #menu ul li a:hover {
+            background-color: #555;
+        }
+
+        #content {
+            height: 100vh;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            position: relative;
+        }
+ #content h1 {
+            background-color: #bbc3d3;
+            opacity: 0.4;
+            font-family: Arial;
+            font-size: 4em;
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.863);
+            padding: 10px;
+            margin-top: 10px;
+            margin-left: 20px;
+        }
+
+        #menu {
+            float: left;
+        }
+        #content {
+            float: left;
+            clear: left;
+            width: calc(100% - 200px);
+        }
+
+        #content h1 {
+            clear: left;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: red;
+            min-width: 160px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration:none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: blue;
+        }
+
+
+        .about {
+            padding-inline-start: 10%;
+            display: flex;
+            justify-content: space-around;
+            margin: 20px;
+        }
     .container {
         max-width: 600px;
         margin: 50px auto;
@@ -60,6 +145,23 @@
     </style> 
 </head>
 <body>
+    <div id="menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>            
+            <li><a href="about.html">About Us</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Academics</a>
+                <div class="dropdown-content">
+                    <a href="academics.html">Overview</a>
+                    <a href="departments.html">Departments</a>
+                    <a href="courses.html">Courses</a>
+                </div>
+            </li>
+            <li><a href="admissions.html">Admissions</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </div>
     <div class="container">
         <h1>Contact Us</h1>
         <form action="process_contact.php" method="post">
