--- a/index.html
+++ b/index.html
@@ -220,5 +220,7 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
                 updateClock();
                 updateCalendar();
         </script>
+                <p>&copy; 2023 Mahendra Higher Secondary School. All rights reserved.</p>
+
 </body>
 </html>
