--- a/index.html
+++ b/index.html
@@ -166,6 +166,16 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
             font-size: 30px;
             margin-right: 10px;
         }
+        
+  footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+  }
     </style>    
 </head>
 <body>
@@ -220,7 +230,9 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
                 updateClock();
                 updateCalendar();
         </script>
-                <p>&copy; 2023 Mahendra Higher Secondary School. All rights reserved.</p>
+        <footer>
+            <p>&copy; 2023 Mahendra Higher Secondary School. All rights reserved.</p>
+        </footer>
 
 </body>
 </html>
