--- a/courses.html
+++ b/courses.html
@@ -141,7 +141,7 @@ footer {
     <div id="menu">
         <ul>
             <li><a href="index.html">Home</a></li>            
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about us.html">About Us</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Academics</a>
                 <div class="dropdown-content">
