--- a/events.html
+++ b/events.html
@@ -150,7 +150,7 @@
     <div id="menu">
         <ul>
             <li><a href="index.html">Home</a></li>            
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about us.html">About Us</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Academics</a>
                 <div class="dropdown-content">
