--- a/about us.html
+++ b/about us.html
@@ -164,7 +164,7 @@
             top: 0;
             left: 0;
             width: 80%;
-            height: 100%;
+            height: 125%;
             background-color: rgba(0, 0, 0, 0.8);
             display: none;
             justify-content: center;
@@ -178,8 +178,8 @@
         }
 
         .enlarged img {
-            width: 100%;
-            max-width: 80%;
+            width: 80%;
+            max-width: 60%;
             height: auto;
             border-radius: 8px 8px 0 0;
             border-bottom: none;
@@ -201,7 +201,7 @@
     <div id="menu">
         <ul>
             <li><a href="index.html">Home</a></li>            
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about us.html">About Us</a></li>
             <li class="dropdown">
                 <a href="#" class="dropbtn">Academics</a>
                 <div class="dropdown-content">
