--- a/index.html
+++ b/index.html
@@ -166,7 +166,16 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
             font-size: 30px;
             margin-right: 10px;
         }
-        
+        @media only screen and (max-width: 768px) {
+    body {
+    background-size: auto;}
+}
+
+@media only screen and (max-width: 480px) {
+    body {
+        background-size: auto; 
+    }
+}
   footer {
       background-color: #333;
       color: #fff;
