--- a/index.html
+++ b/index.html
@@ -179,11 +179,10 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
   footer {
       background-color: #333;
       color: #fff;
-      text-align: center;
-      padding: 10px;
-      position: fixed;
+      text-align: right;
+      position: right;
       bottom: 0;
-      width: 100%;
+     
   }
     </style>    
 </head>
@@ -211,12 +210,6 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
-
-    <div id="content">
-        <h1>Committed to excellence in Education</h1>
-        <h2>Providing the best education with excellent faculty members.</h2>
-        <a href="another-page.html" class="cta-button">Learn More</a>
-    </div>
     <script>
         function updateClock() {
             var now = new Date();
@@ -240,6 +233,11 @@ footer { grid-row: 4 / 5; grid-column: 1 / 2; }
                 updateCalendar();
         </script>
         <footer>
+            <div id="content">
+                <h1>Committed to excellence in Education</h1>
+                <h2>Providing the best education with excellent faculty members.</h2>
+                <a href="another-page.html" class="cta-button">Learn More</a>
+            </div>
             <p>&copy; 2023 Mahendra Higher Secondary School. All rights reserved.</p>
         </footer>
 
